<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Terms -->
    <string name="term_copyit" translatable="false">Copy It!</string>
    <string name="term_pasteit" translatable="false">Paste It!</string>

    <!-- Dashboard icons -->
    <string name="dashboard_button_copyit" translatable="false">@string/term_copyit</string>
    <string name="dashboard_button_pasteit" translatable="false">@string/term_pasteit</string>
    <string name="dashboard_button_sendtoapp">Share it</string>
    <string name="dashboard_button_login">Login</string>
    <string name="dashboard_button_settings">Settings</string>
    <string name="dashboard_button_about">About</string>
    <string name="dashboard_button_history">History</string>
    <!-- Menu -->
    <string name="menu_settings">@string/dashboard_button_settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_history_clear">Clear</string>
    <!-- Buttons -->
    <string name="button_copyit" translatable="false">@string/dashboard_button_copyit</string>
    <string name="button_pasteit" translatable="false">@string/dashboard_button_pasteit</string>
    <string name="button_login">@string/dashboard_button_login</string>
    <!-- Preferences -->
    <string name="pref_category_history">History</string>
    <string name="pref_category_account">User account</string>
    <string name="pref_category_information">Information</string>
    <string name="pref_history_tracking_state">Save actions to your history</string>
    <string name="pref_history_tracking_state_summary_on">Actions are saved</string>
    <string name="pref_history_tracking_state_summary_off">Actions are not saved</string>
    <string name="pref_history_clear">Clear history</string>
    <string name="pref_login">@string/dashboard_button_login</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_about">@string/dashboard_button_about</string>
    <!-- Activity titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Welcome to CopyIt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">@string/pref_about</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_debug">Copy It debug screen</string>
    <string name="title_activity_test">Tests EN</string>
    <string name="title_activity_logged_out">Logged out</string>
    <string name="title_activity_history">History</string>
    <!-- Other stuff -->
    <string name="text_content">Content:</string>
    <string name="text_welcome_message">Thank you for installing CopyIt. To start using CopyIt please login.</string>
    <string name="text_logging_in">Logging in&#8230;</string>
    <string name="text_login_successful">Login successful!</string>
    <string name="text_logout_successful">Logout successful!</string>
    <string name="text_login_question">It looks like you\'re not logged in. Do you want to login in?</string>
    <string name="text_content_pushed">Pushed the following content: \'%1$s\'</string>
    <string name="text_content_pulled">Pulled the following content: \'%1$s\'</string>
    <string name="text_content_pulling">Pulling content&#8230;</string>
    <string name="text_content_pushing">Pushing content&#8230;</string>
    <string name="text_history_cleared">The history has been cleared</string>
    <string name="text_history_empty">No history has been recorded yet</string>
    <!-- Accessibility -->
    <string name="accessibility_widget_button_app">This button opens Copy It</string>
    <string name="accessibility_app_icon_big">Big CopyIt logo</string>
    <!-- Dialog -->
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_busy">Busy</string>
    <string name="dialog_title_select_send_app">Select app to share to&#8230;</string>
    <string name="dialog_button_okay">Okay</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <!-- Errors -->
    <string name="error_device_setup_failed">Could not setup the device: %1$s</string>
    <string name="error_general">An error occurred: %1$s</string>
    <!-- Widgets -->
    <string name="widget_title_general">CopyIt - General</string>
    <string name="widget_title_copyit">CopyIt - Copy It!</string>
    <string name="widget_title_pasteit">CopyIt - Paste It!</string>
    <string name="widget_title_copyit_pasteit">CopyIt - Copy/Paste It!</string>
    <!-- About information -->
    <string name="about_version">Version: %1$s</string>
    <string name="about_copyright">Made by MMS-Projects</string>
    <!-- Update screen -->
    <string name="update_available_text">There is a new Copy It version available. To download the latest version click the download button. Select the package with the following name:</string>
    <string name="update_button_download">Download update</string>
    <!-- Debug info -->
    <string name="debug_label_server_baseurl">Server baseurl</string>
    <string name="debug_label_jenkins_baseurl">Jenkins baseurl</string>
    <string name="debug_label_device_id">Device id</string>
    <string name="debug_label_device_password">Device password</string>
    <string name="debug_label_build_number">Build number</string>
    <string name="debug_label_screen_density">Screen density</string>
    <string name="debug_no_value">None</string>
    <string name="debug_unknown">Unknown</string>
    <string name="debug_available">Available</string>
    <string name="debug_not_available">Not available</string>
    <!-- History screen -->
    <string name="history_cab_put_in_clipboard">Put in clipboard</string>
    <string name="history_content_set">Set the clipboard content to \'%1$s\'</string>

    
    <!-- Login specific stuff -->
    <string name="login_button_browser_login">Login using our website</string>
    <string name="login_dialog_text_automatic_service_login">Would you like to automatically login using %1$s?</string>
    
    <!-- App settings -->
    <string name="default_baseurl" translatable="false">http://copyit.dev.mms-projects.net</string>
    <string name="jenkins_joburl" translatable="false">http://jenkins.marlinc.nl/job/CopyIt-App-Beta</string>
    <string name="app_name" translatable="false">CopyIt</string>
    <string name="default_apk" translatable="false">copyit.apk</string>
    <string name="ga_trackingId" translatable="false">UA-37152392-6</string>
    <string name="facebook_app_id" translatable="false">143407639157783</string>

    <bool name="ga_autoActivityTracking" translatable="false">true</bool>
    <bool name="ga_reportUncaughtExceptions" translatable="false">true</bool>

</resources>
